[project]
name = "resume_analysis_improvement_system"
version = "0.1.0"
description = "resume_analysis_improvement_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "jambo",
]

[project.scripts]
resume_analysis_improvement_system = "resume_analysis_improvement_system.main:run"
run_crew = "resume_analysis_improvement_system.main:run"
train = "resume_analysis_improvement_system.main:train"
replay = "resume_analysis_improvement_system.main:replay"
test = "resume_analysis_improvement_system.main:test"
run_with_trigger = "resume_analysis_improvement_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
